# isminet

./: .coverage  .cursorrules  .env  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  PROGRESS.md  README.md  config.py  mypy.ini  pyproject.toml  requirements.txt  test_logging_demo.py
.github/workflows/: stale.yml
clients/: base.py
docs/: add-structured-logging.md  apple_recommendations.md  architecture.d2  centralize-configuration-in-env.md  configuration.md  get-out-of-this-mess.md  unifi_network_api.md
docs/api_responses/: client_response.json  device_response.json  self_response.json  sites_response.json  version_response.json
isminet/: __init__.py  config.py  logging.py  models.py  settings.py
isminet/clients/: base.py  unifi.py
isminet/models/: __init__.py  base.py  client_components.py  device_components.py  devices.py  enums.py  mixins.py  network.py  sites.py  system.py  validators.py  version.py  wireless.py
scripts/: fetch_api_responses.py
tests/: api_test.py  conftest.py  device_models_test.py  models_test.py  test_api.py  test_device_models.py  test_logging.py  test_models.py  test_network_models.py  test_settings.py  test_system_models.py  test_unifi_client.py  test_validation.py  test_wireless_models.py
