[project]
name = "isminet"
version = "0.1.0"
requires-python = ">=3.12"
description = "UniFi Network API client"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ismar Iljazovic"},
]
dependencies = [
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "structlog>=25.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "ruff>=0.9.1",
    "types-requests>=2.32.0.20241016",
    "mypy>=1.14.1",
]
